# kokoro-service

./: .gitignore  Dockerfile  Makefile  README.md  TRIBAL_KNOWLEDGE.md  cache.py  db.py  docker-compose.yml  kokoro_sdk.py  pyproject.toml  qa_check.sh  qa_quick.sh  requirements-dev.txt  requirements.server.txt  requirements.txt  server.py  speak.sh  tts.py
src/: app.py  cli.py
src/api/: admin.py  batch.py  cache.py  models.py  speech.py
src/cache/: __init__.py  manager.py
src/core/: audio.py  logging.py  state.py
src/db/: __init__.py  connection.py  operations.py
src/tts/: __init__.py  constants.py  engine.py
srcwiki/: API — Admin Endpoints.md  API — Batch Endpoints.md  API — Cache Endpoints.md  API — Speech Endpoints.md  Architecture.md  Component — API Layer.md  Component — Cache Manager.md  Component — Core Services.md  Component — Database Layer.md  Component — Shell Client.md  Component — TTS Engine.md  Component — Web UI.md  Data Flow.md  Functional Requirements.md  Home.md  Operations Guide.md  Overview.md  QA and Development.md  Setup and Installation.md  System Design.md  User Flows.md  VALIDATION_REPORT.md
static/: index.html
